feat: add users endooints to help challenge evaluation
